--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
   "Programming Language :: Rust",
   "Topic :: Software Development :: Libraries :: Python Modules"
 ]
-description = "Production-grade Python bindings for GraphBit agentic workflow automation"
+description = "GraphBit is the world’s first enterprise-grade Agentic AI framework, built on a Rust core with a Python wrapper for unmatched speed, security, and scalability. It enables reliable multi-agent workflows with minimal CPU and memory usage, making it production-ready for real-world enterprise environments."
 documentation = "https://docs.graphbit.ai"
 homepage = "https://graphbit.ai"
 keywords = ["ai", "automation", "workflow", "agent", "llm"]
