--- a/examples/research-paper-summarizer-agent/pyproject.toml
+++ b/examples/research-paper-summarizer-agent/pyproject.toml
@@ -15,10 +15,14 @@ dependencies = [
   "requests (>=2.32.4,<3.0.0)",
   "faiss-cpu (>=1.11.0,<2.0.0)",
   "numpy (>=2.3.1,<3.0.0)",
-  "python-multipart (>=0.0.20,<1.0.0)"
+  "python-multipart (>=0.0.20,<1.0.0)",
+  "graphbit (>=0.5.0,<0.6.0)"
 ]
 description = "Research Paper Summarizer Agent using GraphBit framework for PDF analysis and Q&A"
 name = "research-paper-summarizer-agent"
 readme = "README.md"
 requires-python = ">=3.11"
 version = "0.1.0"
+
+[tool.poetry]
+package-mode = false
