feat: added chat completion, embeddings, similarity score

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,14 +38,16 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "rich>=13.0.0",
     "typer>=0.9.0",
-    "huggingface_hub>=0.33.4"
+    "huggingface_hub>=0.33.4",
+    "numpy>=1.24.0"
 ]
 
 [project.optional-dependencies]
 ai = [
     "anthropic>=0.24.0",
     "openai>=1.30.0",
-    "huggingface_hub>=0.33.4"
+    "huggingface_hub>=0.33.4",
+    "numpy>=1.24.0"
 ]
 vector-db = [
     "astrapy>=1.0.0",
@@ -214,6 +216,7 @@ crewai = {version = ">=0.41.0", optional = true}
 elasticsearch = {version = ">=8.0.0", optional = true}
 faiss-cpu = {version = ">=1.7.0", optional = true}
 huggingface_hub = ">=0.33.4"
+numpy = ">=1.24.0"
 ibm-db = {version = ">=3.1.0", optional = true}
 langchain = {version = ">=0.1.0", optional = true}
 langchain-anthropic = {version = "^0.3.19", optional = true}
@@ -227,7 +230,6 @@ llama-index-llms-ollama = {version = "^0.7.1", optional = true}
 mariadb = {version = ">=1.1.0", optional = true}
 matplotlib = {version = ">=3.7.0", optional = true}
 memory-profiler = {version = ">=0.61.0", optional = true}
-numpy = {version = ">=1.24.0", optional = true}
 openai = {version = ">=1.30.0", optional = true}
 pandas = {version = ">=2.0.0", optional = true}
 pinecone = {version = ">=4.0.0", optional = true}
@@ -319,10 +321,11 @@ full = [
   "types-pyyaml",
   "aiohttp"
 ]
-huggingface = ["huggingface_hub"]
+huggingface = ["huggingface_hub", "numpy"]
 mariadb = ["mariadb", "numpy"]
 milvus = ["pymilvus"]
 mongodb = ["pymongo"]
+numpy = ["numpy"]
 pgvector = ["psycopg2"]
 pinecone = ["pinecone"]
 qdrant = ["qdrant-client"]
