--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,42 +84,9 @@ benchmark = [
     "pydantic-ai>=0.0.5"
 ]
 full = [
-  "anthropic>=0.24.0",
-  "openai>=1.30.0",
-  "astrapy>=1.0.0",
-  "chromadb>=0.4.0",
-  "elasticsearch>=8.0.0",
-  "faiss-cpu>=1.7.0",
-  "pinecone>=4.0.0",
-  "pymilvus>=2.3.0",
-  "qdrant-client>=1.7.0",
-  "weaviate-client>=4.4.0",
-  "boto3>=1.26.0",
-  "ibm-db>=3.1.0",
-  "mariadb>=1.1.0",
-  "psycopg2>=2.9.0",
-  "pymongo>=4.0.0",
-  "click>=8.2.1",
-  "matplotlib>=3.7.0",
-  "numpy>=1.24.0",
-  "pandas>=2.0.0",
-  "psutil>=5.9.0",
-  "seaborn>=0.12.0",
-  "tabulate>=0.9.0",
-  "memory-profiler>=0.61.0",
-  "crewai>=0.41.0",
-  "langchain>=0.1.0",
-  "langchain-anthropic>=0.3.19",
-  "langchain-ollama>=0.3.7",
-  "langchain-openai>=0.1.0",
-  "langgraph>=0.1.0",
-  "llama-index>=0.9.0",
-  "llama-index-cli>=0.5.0",
-  "llama-index-llms-anthropic>=0.8.5",
-  "llama-index-llms-ollama>=0.7.1",
-  "pydantic-ai>=0.0.5",
-  "requests>=2.25.0",
-  "types-pyyaml>=6.0.12.20250822"
+    "graphbit[ai,vector-db,databases,benchmark]",
+    "requests>=2.25.0",
+    "types-pyyaml>=6.0.12.20250822"
 ]
 
 [project.urls]
