--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ classifiers = [
   "License :: InfinitiBit Approved :: Custom License",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
@@ -37,7 +38,7 @@ maintainers = [
 ]
 name = "graphbit"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.9"
 version = "0.5.1"
 
 [project.optional-dependencies]
@@ -46,7 +47,7 @@ ai = [
   "openai>=1.30.0"
 ]
 benchmark = [
-  "click>=8.2.1",
+  "click>=8.2.1; python_version >= '3.10'",
   "matplotlib>=3.7.0",
   "numpy>=1.24.0",
   "pandas>=2.0.0",
@@ -54,17 +55,17 @@ benchmark = [
   "seaborn>=0.12.0",
   "tabulate>=0.9.0",
   "memory-profiler>=0.61.0",
-  "crewai>=0.41.0",
-  "langchain>=0.1.0",
-  "langchain-anthropic>=0.3.19",
-  "langchain-ollama>=0.3.7",
-  "langchain-openai>=0.1.0",
+  "crewai>=0.41.0; python_version >= '3.10'",
+  "langchain>=0.1.0; python_version >= '3.10'",
+  "langchain-anthropic>=0.3.19; python_version >= '3.10'",
+  "langchain-ollama>=0.3.7; python_version >= '3.10'",
+  "langchain-openai>=0.1.0; python_version >= '3.10'",
   "langgraph>=0.1.0",
   "llama-index>=0.9.0",
-  "llama-index-cli>=0.5.0",
+  "llama-index-cli>=0.5.0; python_version >= '3.10'",
   "llama-index-llms-anthropic>=0.8.5",
   "llama-index-llms-ollama>=0.7.1",
-  "pydantic-ai>=0.0.5"
+  "pydantic-ai>=0.0.5; python_version >= '3.10'"
 ]
 databases = [
   "boto3>=1.26.0",
@@ -79,13 +80,13 @@ full = [
   "openai>=1.30.0",
   # Vector DB dependencies
   "astrapy>=1.0.0",
-  "chromadb>=0.4.0",
+  "chromadb>=0.4.0; python_version >= '3.10'",
   "elasticsearch>=8.0.0",
   "faiss-cpu>=1.7.0",
   "pinecone>=4.0.0",
   "pymilvus>=2.3.0",
   "qdrant-client>=1.7.0",
-  "weaviate-client>=4.4.0",
+  "weaviate-client>=4.4.0; python_version >= '3.9.2'",
   # Database dependencies
   "boto3>=1.26.0",
   "ibm-db>=3.1.0",
@@ -93,7 +94,7 @@ full = [
   "psycopg2>=2.9.0",
   "pymongo>=4.0.0",
   # Benchmark dependencies
-  "click>=8.2.1",
+  "click>=8.2.1; python_version >= '3.10'",
   "matplotlib>=3.7.0",
   "numpy>=1.24.0",
   "pandas>=2.0.0",
@@ -101,30 +102,30 @@ full = [
   "seaborn>=0.12.0",
   "tabulate>=0.9.0",
   "memory-profiler>=0.61.0",
-  "crewai>=0.41.0",
-  "langchain>=0.1.0",
-  "langchain-anthropic>=0.3.19",
-  "langchain-ollama>=0.3.7",
-  "langchain-openai>=0.1.0",
+  "crewai>=0.41.0; python_version >= '3.10'",
+  "langchain>=0.1.0; python_version >= '3.10'",
+  "langchain-anthropic>=0.3.19; python_version >= '3.10'",
+  "langchain-ollama>=0.3.7; python_version >= '3.10'",
+  "langchain-openai>=0.1.0; python_version >= '3.10'",
   "langgraph>=0.1.0",
   "llama-index>=0.9.0",
-  "llama-index-cli>=0.5.0",
+  "llama-index-cli>=0.5.0; python_version >= '3.10'",
   "llama-index-llms-anthropic>=0.8.5",
   "llama-index-llms-ollama>=0.7.1",
-  "pydantic-ai>=0.0.5",
+  "pydantic-ai>=0.0.5; python_version >= '3.10'",
   # Additional dependencies
   "requests>=2.25.0",
   "types-pyyaml>=6.0.12.20250822"
 ]
 vector-db = [
   "astrapy>=1.0.0",
-  "chromadb>=0.4.0",
+  "chromadb>=0.4.0; python_version >= '3.10'",
   "elasticsearch>=8.0.0",
   "faiss-cpu>=1.7.0",
   "pinecone>=4.0.0",
   "pymilvus>=2.3.0",
   "qdrant-client>=1.7.0",
-  "weaviate-client>=4.4.0"
+  "weaviate-client>=4.4.0; python_version >= '3.9.2'"
 ]
 
 [project.urls]
@@ -218,7 +219,7 @@ disallow_untyped_decorators = true
 disallow_untyped_defs = true
 ignore_missing_imports = true
 no_implicit_optional = true
-python_version = "3.10"
+python_version = "3.9"
 strict_equality = true
 warn_no_return = true
 warn_redundant_casts = true
@@ -247,19 +248,19 @@ anthropic = {version = ">=0.24.0", optional = true}
 astrapy = {version = ">=1.0.0", optional = true}
 boto3 = {version = ">=1.26.0", optional = true}
 # Optional benchmarking dependencies
-chromadb = {version = ">=0.4.0", optional = true}
-click = {version = "^8.2.1", optional = true}
-crewai = {version = ">=0.41.0", optional = true}
+chromadb = {version = ">=0.4.0", optional = true, markers = "python_version >= '3.10'"}
+click = {version = "^8.2.1", optional = true, markers = "python_version >= '3.10'"}
+crewai = {version = ">=0.41.0", optional = true, markers = "python_version >= '3.10'"}
 elasticsearch = {version = ">=8.0.0", optional = true}
 faiss-cpu = {version = ">=1.7.0", optional = true}
 ibm-db = {version = ">=3.1.0", optional = true}
-langchain = {version = ">=0.1.0", optional = true}
-langchain-anthropic = {version = "^0.3.19", optional = true}
-langchain-ollama = {version = "^0.3.7", optional = true}
-langchain-openai = {version = ">=0.1.0", optional = true}
+langchain = {version = ">=0.1.0", optional = true, markers = "python_version >= '3.10'"}
+langchain-anthropic = {version = "^0.3.19", optional = true, markers = "python_version >= '3.10'"}
+langchain-ollama = {version = "^0.3.7", optional = true, markers = "python_version >= '3.10'"}
+langchain-openai = {version = ">=0.1.0", optional = true, markers = "python_version >= '3.10'"}
 langgraph = {version = ">=0.1.0", optional = true}
 llama-index = {version = ">=0.9.0", optional = true}
-llama-index-cli = {version = "^0.5.0", optional = true}
+llama-index-cli = {version = "^0.5.0", optional = true, markers = "python_version >= '3.10'"}
 llama-index-llms-anthropic = {version = "^0.8.5", optional = true}
 llama-index-llms-ollama = {version = "^0.7.1", optional = true}
 mariadb = {version = ">=1.1.0", optional = true}
@@ -272,10 +273,10 @@ pinecone = {version = ">=4.0.0", optional = true}
 # Benchmarking specific dependencies
 psutil = {version = ">=5.9.0", optional = true}
 psycopg2 = {version = ">=2.9.0", optional = true}
-pydantic-ai = {version = ">=0.0.5", optional = true}
+pydantic-ai = {version = ">=0.0.5", optional = true, markers = "python_version >= '3.10'"}
 pymilvus = {version = ">=2.3.0", optional = true}
 pymongo = {version = ">=4.0.0", optional = true}
-python = ">=3.10,<=3.13.7"
+python = ">=3.9,<=3.13.7"
 python-dotenv = ">=1.0.0"
 qdrant-client = {version = ">=1.7.0", optional = true}
 requests = {version = ">=2.25.0", optional = true}
@@ -284,7 +285,7 @@ seaborn = {version = ">=0.12.0", optional = true}
 tabulate = {version = ">=0.9.0", optional = true}
 typer = ">=0.9.0"
 types-pyyaml = {version = "^6.0.12.20250822", optional = true}
-weaviate-client = {version = ">=4.4.0", optional = true}
+weaviate-client = {version = ">=4.4.0", optional = true, markers = "python_version >= '3.9.2'"}
 
 # Optional dependency groups for pip install
 [tool.poetry.extras]
