--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -9,6 +9,7 @@ classifiers = [
   "Intended Audience :: Developers",
   "License :: Other/Proprietary License",
   "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
@@ -24,7 +25,7 @@ license = {file = "LICENSE.md"}
 name = "graphbit"
 readme = "README.md"
 repository = "https://github.com/InfinitiBit/graphbit"
-requires-python = ">=3.10"
+requires-python = ">=3.9"
 version = "0.5.1"
 
 [tool.maturin]
