--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,9 @@ ai = [
   "huggingface_hub>=0.33.4",
   "numpy>=1.24.0"
 ]
+vllm = [
+  "vllm>=0.11.1"
+]
 benchmark = [
   "click>=8.2.1",
   "matplotlib>=3.7.0",
@@ -81,6 +84,7 @@ full = [
   # AI dependencies
   "anthropic>=0.24.0",
   "openai>=1.30.0",
+  "vllm>=0.11.1",
   # Vector DB dependencies
   "astrapy>=1.0.0",
   "chromadb>=0.4.0",
@@ -291,7 +295,7 @@ seaborn = {version = ">=0.12.0", optional = true}
 tabulate = {version = ">=0.9.0", optional = true}
 typer = ">=0.9.0"
 types-pyyaml = {version = "^6.0.12.20250822", optional = true}
-vllm = {version = ">=0.6.0", optional = true}
+vllm = {version = ">=0.11.1", optional = true}
 weaviate-client = {version = ">=4.4.0", optional = true}
 
 # Optional dependency groups for pip install
