--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -3,37 +3,58 @@ build-backend = "maturin"
 requires = ["maturin>=1.0,<2.0"]
 
 [project]
-authors = [{name = "GraphBit Team"}]
+authors = [
+  {name = "InfinitiBit Team", email = "contact@infinitibit.ai"}
+]
 classifiers = [
   "Development Status :: 4 - Beta",
-  "Intended Audience :: Developers",
   "License :: Other/Proprietary License",
+  "Intended Audience :: Developers",
+  "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
   "Programming Language :: Rust",
-  "Topic :: Software Development :: Libraries :: Python Modules"
+  "Topic :: Software Development :: Libraries :: Python Modules",
+  "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
-description = "GraphBit is the world’s first enterprise-grade Agentic AI framework, built on a Rust core with a Python wrapper for unmatched speed, security, and scalability. It enables reliable multi-agent workflows with minimal CPU and memory usage, making it production-ready for real-world enterprise environments."
-documentation = "https://docs.graphbit.ai"
-homepage = "https://graphbit.ai"
-keywords = ["ai", "automation", "workflow", "agent", "llm"]
+dependencies = [
+  "aiofiles>=23.0.0",
+  "aiohttp>=3.12.15",
+  "python-dotenv>=1.0.0",
+  "rich>=13.0.0",
+  "typer>=0.9.0",
+  "huggingface_hub>=0.33.4",
+  "numpy>=1.24.0"
+]
+description = "GraphBit - Advanced workflow automation and AI agent orchestration library"
+keywords = ["ai", "agents", "workflow", "automation", "rust", "python", "llm", "orchestration"]
 license = {file = "LICENSE.md"}
+maintainers = [
+  {name = "InfinitiBit Team", email = "contact@infinitibit.ai"}
+]
 name = "graphbit"
 readme = "README.md"
-repository = "https://github.com/InfinitiBit/graphbit"
-requires-python = ">=3.10"
-version = "0.5.1"
+requires-python = ">=3.9,<3.15"
+version = "0.6.0"
+
+[project.urls]
+"Bug Tracker" = "https://github.com/InfinitiBit/graphbit/issues"
+Changelog = "https://github.com/InfinitiBit/graphbit/blob/main/CHANGELOG.md"
+Discord = "https://discord.com/invite/huVJwkyu"
+Documentation = "https://docs.graphbit.ai"
+Homepage = "https://github.com/InfinitiBit/graphbit"
+Repository = "https://github.com/InfinitiBit/graphbit"
 
 [tool.maturin]
-# PyO3 bindings configuration
 bindings = "pyo3"
-# Module configuration - this controls the wheel package name
+manifest-path = "Cargo.toml"
 module-name = "graphbit"
-# Build profile for optimized releases
 profile = "release"
 python-source = "python-src"
-# Build optimizations
+skip-auditwheel = false
 strip = true
