--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ dependencies = [
   "rich>=13.0.0",
   "typer>=0.9.0",
   "huggingface_hub>=0.33.4",
-  "numpy>=1.24.0"
+  "numpy>=1.24,<2.1; python_version < \"3.10\"",
+  "numpy>=2.1,<3.0; python_version >= \"3.10\"",
 ]
 description = "GraphBit - Advanced workflow automation and AI agent orchestration library"
 keywords = ["ai", "agents", "workflow", "automation", "rust", "python", "llm", "orchestration"]
@@ -160,11 +161,14 @@ version = "0.5.1"
 aiofiles = ">=23.0.0"
 aiohttp = "^3.12.15"
 huggingface_hub = ">=0.33.4"
-numpy = ">=1.24.0"
-python = ">=3.9,<=3.13.7"
+python = ">=3.9,<=3.14"
 python-dotenv = ">=1.0.0"
 rich = ">=13.0.0"
 typer = ">=0.9.0"
+numpy = [
+  { version = ">=1.24,<2.1", python = ">=3.9,<3.10" },
+  { version = ">=2.1,<3.0",  python = ">=3.10,<3.15" },
+]
 
 [tool.poetry.group.dev.dependencies]
 bandit = "^1.7.0"
