--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -22,7 +22,7 @@ name: Build and Publish to PyPI
 # - Manual workflow_dispatch - Optional publish with safety controls
 #
 # SAFETY FEATURES:
-# - Sequential publication (TestPyPI → Production PyPI)
+# - Sequential publication (TestPyPI -> Production PyPI)
 # - All builds must succeed before any publication
 # - Version validation (tag must match pyproject.toml)
 # - Artifact count verification (28 wheels + 1 sdist)
@@ -171,11 +171,11 @@ jobs:
     - name: Verify wheel contents
       shell: bash
       run: |
-        echo "📦 Built wheels:"
+        echo "[ARTIFACT] Built wheels:"
         ls -lh python/dist/
 
         echo ""
-        echo "🔍 Wheel details:"
+        echo "[INSPECT] Wheel details:"
         python -m pip install --upgrade pip wheel
         for wheel in python/dist/*.whl; do
           echo "Inspecting: $(basename $wheel)"
@@ -239,11 +239,11 @@ jobs:
 
     - name: Verify sdist contents
       run: |
-        echo "📦 Built source distribution:"
+        echo "[ARTIFACT] Built source distribution:"
         ls -lh python/dist/
 
         echo ""
-        echo "🔍 Sdist contents:"
+        echo "[INSPECT] Sdist contents:"
         tar -tzf python/dist/*.tar.gz | head -30
 
     - name: Upload sdist artifact
@@ -293,7 +293,7 @@ jobs:
         find dist-all -name "*.whl" -exec cp {} dist/ \;
         find dist-all -name "*.tar.gz" -exec cp {} dist/ \;
 
-        echo "📦 Collected distribution files:"
+        echo "[ARTIFACT] Collected distribution files:"
         ls -lh dist/
 
     - name: Extract version from tag or pyproject.toml
@@ -319,7 +319,7 @@ jobs:
         echo "wheel_count=$WHEEL_COUNT" >> $GITHUB_OUTPUT
         echo "sdist_count=$SDIST_COUNT" >> $GITHUB_OUTPUT
 
-        echo "📊 Artifact counts:"
+        echo "[STATS] Artifact counts:"
         echo "  Wheels: $WHEEL_COUNT"
         echo "  Sdist: $SDIST_COUNT"
 
@@ -329,23 +329,23 @@ jobs:
         WHEEL_COUNT=${{ steps.count.outputs.wheel_count }}
         SDIST_COUNT=${{ steps.count.outputs.sdist_count }}
 
-        echo "📊 Verification Summary:"
+        echo "[STATS] Verification Summary:"
         echo "  Wheels found: $WHEEL_COUNT"
         echo "  Sdist found: $SDIST_COUNT"
         echo ""
 
         # Check sdist count (must be exactly 1)
         if [ "$SDIST_COUNT" -ne 1 ]; then
-          echo "❌ ERROR: Expected 1 sdist, found $SDIST_COUNT"
+          echo "[ERROR] Expected 1 sdist, found $SDIST_COUNT"
           exit 1
         else
-          echo "✅ Sdist count correct: 1"
+          echo "[OK] Sdist count correct: 1"
         fi
 
         # Report wheel count (informational only)
-        echo "✅ Found $WHEEL_COUNT wheel(s)"
+        echo "[OK] Found $WHEEL_COUNT wheel(s)"
         echo ""
-        echo "✅ Artifact verification passed!"
+        echo "[OK] Artifact verification passed!"
 
     - name: Upload verified distribution files
       uses: actions/upload-artifact@v4
@@ -358,7 +358,7 @@ jobs:
     - name: Generate verification summary
       if: always()
       run: |
-        echo "## 🔍 Artifact Verification" >> $GITHUB_STEP_SUMMARY
+        echo "## Artifact Verification" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "**Version**: ${{ steps.version.outputs.version }}" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
@@ -369,11 +369,11 @@ jobs:
         echo "| Sdist Found | ${{ steps.count.outputs.sdist_count }} |" >> $GITHUB_STEP_SUMMARY
 
         if [ "${{ steps.verify.outputs.passed }}" = "true" ]; then
-          echo "| Version Check | ✅ Pass |" >> $GITHUB_STEP_SUMMARY
-          echo "| Absolute Paths | ✅ None Found |" >> $GITHUB_STEP_SUMMARY
-          echo "| Overall | ✅ **PASSED** |" >> $GITHUB_STEP_SUMMARY
+          echo "| Version Check | OK Pass |" >> $GITHUB_STEP_SUMMARY
+          echo "| Absolute Paths | OK None Found |" >> $GITHUB_STEP_SUMMARY
+          echo "| Overall | OK **PASSED** |" >> $GITHUB_STEP_SUMMARY
         else
-          echo "| Overall | ❌ **FAILED** |" >> $GITHUB_STEP_SUMMARY
+          echo "| Overall | ERROR **FAILED** |" >> $GITHUB_STEP_SUMMARY
         fi
 
   # ============================================================================
@@ -394,7 +394,7 @@ jobs:
     steps:
     - name: Safety Notice - TestPyPI First
       run: |
-        echo "🛡️ SAFETY STEP: Publishing to TestPyPI first"
+        echo "[SAFETY] Publishing to TestPyPI first"
         echo ""
         echo "This is a mandatory safety step before Production PyPI publication."
         echo "TestPyPI allows us to:"
@@ -422,24 +422,24 @@ jobs:
     - name: Verify TestPyPI upload
       run: |
         VERSION=${{ needs.verify-artifacts.outputs.version }}
-        echo "⏳ Waiting for TestPyPI to process the upload..."
+        echo "[WAIT] Waiting for TestPyPI to process the upload..."
         sleep 30
 
-        echo "✅ Package uploaded to TestPyPI"
-        echo "🔗 View at: https://test.pypi.org/project/graphbit/$VERSION/"
+        echo "[OK] Package uploaded to TestPyPI"
+        echo "[LINK] View at: https://test.pypi.org/project/graphbit/$VERSION/"
         echo ""
         echo "To test installation:"
         echo "  pip install --index-url https://test.pypi.org/simple/ graphbit==$VERSION"
 
     - name: Generate TestPyPI summary
       run: |
-        echo "## 📦 TestPyPI Publication" >> $GITHUB_STEP_SUMMARY
+        echo "## TestPyPI Publication" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        echo "✅ **Published** - Version ${{ needs.verify-artifacts.outputs.version }} uploaded to TestPyPI" >> $GITHUB_STEP_SUMMARY
+        echo "[OK] **Published** - Version ${{ needs.verify-artifacts.outputs.version }} uploaded to TestPyPI" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        echo "🔗 [View on TestPyPI](https://test.pypi.org/project/graphbit/${{ needs.verify-artifacts.outputs.version }}/)" >> $GITHUB_STEP_SUMMARY
+        echo "[View on TestPyPI](https://test.pypi.org/project/graphbit/${{ needs.verify-artifacts.outputs.version }}/)" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        echo "### 🧪 Test Installation" >> $GITHUB_STEP_SUMMARY
+        echo "### Test Installation" >> $GITHUB_STEP_SUMMARY
         echo '```bash' >> $GITHUB_STEP_SUMMARY
         echo "pip install --index-url https://test.pypi.org/simple/ graphbit==${{ needs.verify-artifacts.outputs.version }}" >> $GITHUB_STEP_SUMMARY
         echo '```' >> $GITHUB_STEP_SUMMARY
@@ -463,14 +463,14 @@ jobs:
     steps:
     - name: Confirm TestPyPI Success
       run: |
-        echo "✅ SAFETY CHECKPOINT PASSED"
+        echo "[OK] SAFETY CHECKPOINT PASSED"
         echo ""
         echo "TestPyPI publication succeeded!"
         echo "All safety checks passed:"
-        echo "  ✅ All wheels built successfully"
-        echo "  ✅ Source distribution built successfully"
-        echo "  ✅ Artifact verification passed"
-        echo "  ✅ TestPyPI publication succeeded"
+        echo "  [OK] All wheels built successfully"
+        echo "  [OK] Source distribution built successfully"
+        echo "  [OK] Artifact verification passed"
+        echo "  [OK] TestPyPI publication succeeded"
         echo ""
         echo "Proceeding with Production PyPI publication..."
 
@@ -498,11 +498,11 @@ jobs:
         echo "Package version: $PACKAGE_VERSION"
 
         if [ "$TAG_VERSION" != "$PACKAGE_VERSION" ]; then
-          echo "❌ ERROR: Tag version ($TAG_VERSION) doesn't match package version ($PACKAGE_VERSION)"
+          echo "[ERROR] Tag version ($TAG_VERSION) doesn't match package version ($PACKAGE_VERSION)"
           exit 1
         fi
 
-        echo "✅ Version verification passed"
+        echo "[OK] Version verification passed"
 
     - name: Check if version already exists on PyPI
       id: check_version
@@ -529,19 +529,19 @@ jobs:
           echo "$VERSION_EXISTS" >> $GITHUB_OUTPUT
 
           if [ "$VERSION_EXISTS" = "exists=true" ]; then
-            echo "⚠️  Version $VERSION already exists on PyPI"
+            echo "[WARN] Version $VERSION already exists on PyPI"
             if [ "${{ inputs.skip_existing }}" = "true" ]; then
               echo "Skipping upload (skip_existing=true)"
             else
-              echo "❌ ERROR: Version already exists and skip_existing=false"
+              echo "[ERROR] Version already exists and skip_existing=false"
               exit 1
             fi
           else
-            echo "✅ Version $VERSION is new, proceeding with upload"
+            echo "[OK] Version $VERSION is new, proceeding with upload"
           fi
         else
           echo "exists=false" >> $GITHUB_OUTPUT
-          echo "✅ Could not check PyPI, assuming version is new"
+          echo "[OK] Could not check PyPI, assuming version is new"
         fi
 
     - name: Generate build attestation
@@ -563,30 +563,30 @@ jobs:
       if: steps.check_version.outputs.exists != 'exists=true'
       run: |
         VERSION=${{ needs.verify-artifacts.outputs.version }}
-        echo "⏳ Waiting for PyPI to process the upload..."
+        echo "[WAIT] Waiting for PyPI to process the upload..."
         sleep 30
 
         echo "Verifying package is available on PyPI..."
         if pip index versions graphbit 2>/dev/null | grep -q "$VERSION"; then
-          echo "✅ Package successfully uploaded to PyPI"
+          echo "[OK] Package successfully uploaded to PyPI"
         else
-          echo "⚠️  Package may still be processing on PyPI"
+          echo "[WARN] Package may still be processing on PyPI"
         fi
 
     - name: Generate PyPI publication summary
       if: always()
       run: |
-        echo "## 📦 PyPI Publication" >> $GITHUB_STEP_SUMMARY
+        echo "## PyPI Publication" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
 
         if [ "${{ steps.check_version.outputs.exists }}" = "exists=true" ]; then
-          echo "⏭️  **Skipped** - Version ${{ needs.verify-artifacts.outputs.version }} already exists on PyPI" >> $GITHUB_STEP_SUMMARY
+          echo "[SKIP] **Skipped** - Version ${{ needs.verify-artifacts.outputs.version }} already exists on PyPI" >> $GITHUB_STEP_SUMMARY
         else
-          echo "✅ **Published** - Version ${{ needs.verify-artifacts.outputs.version }} uploaded to PyPI" >> $GITHUB_STEP_SUMMARY
+          echo "[OK] **Published** - Version ${{ needs.verify-artifacts.outputs.version }} uploaded to PyPI" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "🔗 [View on PyPI](https://pypi.org/project/graphbit/${{ needs.verify-artifacts.outputs.version }}/)" >> $GITHUB_STEP_SUMMARY
+          echo "[View on PyPI](https://pypi.org/project/graphbit/${{ needs.verify-artifacts.outputs.version }}/)" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### 📥 Installation" >> $GITHUB_STEP_SUMMARY
+          echo "### Installation" >> $GITHUB_STEP_SUMMARY
           echo '```bash' >> $GITHUB_STEP_SUMMARY
           echo "pip install graphbit==${{ needs.verify-artifacts.outputs.version }}" >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
@@ -604,7 +604,7 @@ jobs:
     steps:
     - name: Generate comprehensive workflow summary
       run: |
-        echo "# 🎯 Build and Publish Workflow Summary" >> $GITHUB_STEP_SUMMARY
+        echo "# Build and Publish Workflow Summary" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "**Trigger**: ${{ github.event_name }}" >> $GITHUB_STEP_SUMMARY
         echo "**Ref**: ${{ github.ref }}" >> $GITHUB_STEP_SUMMARY
@@ -612,48 +612,48 @@ jobs:
         echo "**Version**: ${{ needs.verify-artifacts.outputs.version || 'N/A' }}" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
 
-        echo "## 📊 Job Status" >> $GITHUB_STEP_SUMMARY
+        echo "## Job Status" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "| Job | Status |" >> $GITHUB_STEP_SUMMARY
         echo "|-----|--------|" >> $GITHUB_STEP_SUMMARY
 
         # Build Wheels
         if [ "${{ needs.build-wheels.result }}" = "success" ]; then
-          echo "| 🔨 Build Wheels | ✅ Success (7 platforms) |" >> $GITHUB_STEP_SUMMARY
+          echo "| Build Wheels | OK Success (7 platforms) |" >> $GITHUB_STEP_SUMMARY
         else
-          echo "| 🔨 Build Wheels | ❌ Failed |" >> $GITHUB_STEP_SUMMARY
+          echo "| Build Wheels | ERROR Failed |" >> $GITHUB_STEP_SUMMARY
         fi
 
         # Build Sdist
         if [ "${{ needs.build-sdist.result }}" = "success" ]; then
-          echo "| 📦 Source Distribution | ✅ Success |" >> $GITHUB_STEP_SUMMARY
+          echo "| Source Distribution | OK Success |" >> $GITHUB_STEP_SUMMARY
         else
-          echo "| 📦 Source Distribution | ❌ Failed |" >> $GITHUB_STEP_SUMMARY
+          echo "| Source Distribution | ERROR Failed |" >> $GITHUB_STEP_SUMMARY
         fi
 
         # Verify Artifacts
         if [ "${{ needs.verify-artifacts.result }}" = "success" ]; then
-          echo "| 🔍 Verify Artifacts | ✅ Passed |" >> $GITHUB_STEP_SUMMARY
+          echo "| Verify Artifacts | OK Passed |" >> $GITHUB_STEP_SUMMARY
         else
-          echo "| 🔍 Verify Artifacts | ❌ Failed |" >> $GITHUB_STEP_SUMMARY
+          echo "| Verify Artifacts | ERROR Failed |" >> $GITHUB_STEP_SUMMARY
         fi
 
         # TestPyPI (MANDATORY for tag triggers)
         if [ "${{ needs.publish-testpypi.result }}" = "success" ]; then
-          echo "| 🧪 TestPyPI Publication (Safety Step) | ✅ Published |" >> $GITHUB_STEP_SUMMARY
+          echo "| TestPyPI Publication (Safety Step) | OK Published |" >> $GITHUB_STEP_SUMMARY
         elif [ "${{ needs.publish-testpypi.result }}" = "skipped" ]; then
-          echo "| 🧪 TestPyPI Publication (Safety Step) | ⏭️  Skipped |" >> $GITHUB_STEP_SUMMARY
+          echo "| TestPyPI Publication (Safety Step) | Skipped |" >> $GITHUB_STEP_SUMMARY
         else
-          echo "| 🧪 TestPyPI Publication (Safety Step) | ❌ Failed (blocks Production) |" >> $GITHUB_STEP_SUMMARY
+          echo "| TestPyPI Publication (Safety Step) | ERROR Failed (blocks Production) |" >> $GITHUB_STEP_SUMMARY
         fi
 
         # PyPI (ONLY after TestPyPI succeeds)
         if [ "${{ needs.publish-pypi.result }}" = "success" ]; then
-          echo "| 🚀 PyPI Publication (After TestPyPI) | ✅ Published |" >> $GITHUB_STEP_SUMMARY
+          echo "| PyPI Publication (After TestPyPI) | OK Published |" >> $GITHUB_STEP_SUMMARY
         elif [ "${{ needs.publish-pypi.result }}" = "skipped" ]; then
-          echo "| 🚀 PyPI Publication (After TestPyPI) | ⏭️  Skipped |" >> $GITHUB_STEP_SUMMARY
+          echo "| PyPI Publication (After TestPyPI) | Skipped |" >> $GITHUB_STEP_SUMMARY
         else
-          echo "| 🚀 PyPI Publication (After TestPyPI) | ❌ Failed |" >> $GITHUB_STEP_SUMMARY
+          echo "| PyPI Publication (After TestPyPI) | ERROR Failed |" >> $GITHUB_STEP_SUMMARY
         fi
 
         echo "" >> $GITHUB_STEP_SUMMARY
@@ -662,35 +662,35 @@ jobs:
         if [ "${{ needs.build-wheels.result }}" = "success" ] && \
            [ "${{ needs.build-sdist.result }}" = "success" ] && \
            [ "${{ needs.verify-artifacts.result }}" = "success" ]; then
-          echo "## ✅ Workflow Completed Successfully" >> $GITHUB_STEP_SUMMARY
+          echo "## Workflow Completed Successfully" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
           if [ "${{ needs.publish-pypi.result }}" = "success" ]; then
-            echo "🎉 **Package published to Production PyPI!**" >> $GITHUB_STEP_SUMMARY
+            echo "**Package published to Production PyPI!**" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "**Publication Sequence:**" >> $GITHUB_STEP_SUMMARY
-            echo "1. ✅ Built all wheels + sdist" >> $GITHUB_STEP_SUMMARY
-            echo "2. ✅ Verified all artifacts" >> $GITHUB_STEP_SUMMARY
-            echo "3. ✅ Published to TestPyPI (safety step)" >> $GITHUB_STEP_SUMMARY
-            echo "4. ✅ Published to Production PyPI" >> $GITHUB_STEP_SUMMARY
+            echo "1. Built all wheels + sdist" >> $GITHUB_STEP_SUMMARY
+            echo "2. Verified all artifacts" >> $GITHUB_STEP_SUMMARY
+            echo "3. Published to TestPyPI (safety step)" >> $GITHUB_STEP_SUMMARY
+            echo "4. Published to Production PyPI" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "Install with: \`pip install graphbit==${{ needs.verify-artifacts.outputs.version }}\`" >> $GITHUB_STEP_SUMMARY
           elif [ "${{ needs.publish-testpypi.result }}" = "success" ]; then
-            echo "🧪 **Package published to TestPyPI only!**" >> $GITHUB_STEP_SUMMARY
+            echo "**Package published to TestPyPI only!**" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "Production PyPI publication was skipped (use_test_pypi_only=true)" >> $GITHUB_STEP_SUMMARY
           else
-            echo "📦 **Artifacts built successfully!**" >> $GITHUB_STEP_SUMMARY
+            echo "**Artifacts built successfully!**" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "Download artifacts from the workflow run to test locally." >> $GITHUB_STEP_SUMMARY
           fi
         else
-          echo "## ⚠️  Workflow Completed with Issues" >> $GITHUB_STEP_SUMMARY
+          echo "## Workflow Completed with Issues" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "Some jobs failed. Please review the logs above." >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           if [ "${{ needs.publish-testpypi.result }}" = "failure" ]; then
-            echo "❌ **TestPyPI publication failed - Production PyPI blocked**" >> $GITHUB_STEP_SUMMARY
+            echo "**TestPyPI publication failed - Production PyPI blocked**" >> $GITHUB_STEP_SUMMARY
           fi
         fi
 
