--- a/javascript/Cargo.toml
+++ b/javascript/Cargo.toml
@@ -40,6 +40,7 @@ anyhow = "1.0"
 # Utilities
 uuid = { version = "1.8", features = ["v4", "v5", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
+num_cpus = "1.16"
 
 # Logging
 tracing = "0.1"
