--- a/.github/workflows/js-ts-ci-manual.yml
+++ b/.github/workflows/js-ts-ci-manual.yml
@@ -18,6 +18,11 @@ on:
         required: false
         type: boolean
         default: false
+      run_typecheck:
+        description: 'Run TypeScript type checking'
+        required: false
+        type: boolean
+        default: false
       run_coverage:
         description: 'Run code coverage analysis'
         required: false
@@ -96,6 +101,7 @@ jobs:
         run: npm run lint
 
       - name: Type check
+        if: ${{ github.event.inputs.run_typecheck == 'true' }}
         working-directory: javascript
         run: npm run typecheck
 
