--- a/javascript/.github/workflows/js-ts-ci-manual.yml
+++ b/javascript/.github/workflows/js-ts-ci-manual.yml
@@ -17,8 +17,16 @@ on:
         description: 'Lint TypeScript code'
         required: false
         type: boolean
+        default: false      run_unit_tests:
+        description: 'Run unit tests'
+        required: false
+        type: boolean
         default: false
-      run_coverage:
+      run_type_tests:
+        description: 'Run type tests'
+        required: false
+        type: boolean
+        default: false      run_coverage:
         description: 'Run code coverage analysis'
         required: false
         type: boolean
@@ -100,10 +108,12 @@ jobs:
         run: npm run typecheck
 
       - name: Run unit tests
+        if: ${{ github.event.inputs.run_unit_tests == 'true' }}
         working-directory: javascript
         run: npm run test:unit
 
       - name: Run type tests
+        if: ${{ github.event.inputs.run_type_tests == 'true' }}
         working-directory: javascript
         run: npm run test:types
 
