feat: add options to run unit tests and type tests in manual CI workflow

--- a/.github/workflows/js-ts-ci-manual.yml
+++ b/.github/workflows/js-ts-ci-manual.yml
@@ -23,6 +23,16 @@ on:
         required: false
         type: boolean
         default: false
+      run_unit_tests:
+        description: 'Run unit tests'
+        required: false
+        type: boolean
+        default: false
+      run_type_tests:
+        description: 'Run type tests'
+        required: false
+        type: boolean
+        default: false
       run_coverage:
         description: 'Run code coverage analysis'
         required: false
@@ -106,10 +116,12 @@ jobs:
         run: npm run typecheck
 
       - name: Run unit tests
+        if: ${{ github.event.inputs.run_unit_tests == 'true' }}
         working-directory: javascript
         run: npm run test:unit
 
       - name: Run type tests
+        if: ${{ github.event.inputs.run_type_tests == 'true' }}
         working-directory: javascript
         run: npm run test:types
 
