feat: enhance musl-tools installation by adding musl-dev and setting compiler environment variables

--- a/.github/workflows/js-ts-release.yml
+++ b/.github/workflows/js-ts-release.yml
@@ -102,7 +102,10 @@ jobs:
         if: matrix.target == 'x86_64-unknown-linux-musl'
         run: |
           sudo apt-get update
-          sudo apt-get install -y musl-tools
+          sudo apt-get install -y musl-tools musl-dev
+        env:
+          CC: musl-gcc
+          CXX: musl-g++
 
       - name: Install npm dependencies
         working-directory: javascript
